Added a link to the user reviews page

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -27,6 +27,7 @@
         <a class="btn btn-more" href="{% url 'edit_profile' %}">Edit Your Profile</a>
         <a class="btn btn-more" href="{% url 'add_trip' %}">Add Trip</a>
         <a class="btn btn-more" href="{% url 'favourites' %}">Favourites</a>
+        <a class="btn btn-more" href="{% url 'view_reviews' %}">Your Reviews</a>
     </div>
     <div class="row">
         <div class="col-12 col-lg-6">
