--- a/accounts/templates/accounts/view_reviews.html
+++ b/accounts/templates/accounts/view_reviews.html
@@ -69,7 +69,8 @@
                             {% if user == review.user %}
                             <div class="col-md-4 col-lg-4">
                                 <a href="{% url 'delete_review' review.id %}" class="float-left remove-item btn delete">
-                                    <small>Delete <i class="fas fa-trash"></i></small></a></a>
+                                    <small>Delete <i class="fas fa-trash"></i></small></a>
+                                <a href="{% url 'edit_review' review.id %}">Edit Review</a>
                             </div>
                             {% endif %}
                         </div>
