--- a/accounts/templates/accounts/view_reviews.html
+++ b/accounts/templates/accounts/view_reviews.html
@@ -15,8 +15,8 @@
             </div>
         </div>
         {% endif %}
-<!--display user reviews -->
-{% if reviews %}
+        <!--display user reviews -->
+        {% if reviews %}
         <div class="row m-1">
             {% for review in reviews %}
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -65,12 +65,13 @@
                                 {% endif %}
                             </div>
                         </div>
-                        <div class="row d-flex justify-content-md-end">
+                        <div class="row d-flex justify-content-end">
                             {% if user == review.user %}
-                            <div class="col-md-4 col-lg-4">
-                                <a href="{% url 'delete_review' review.id %}" class="float-left remove-item btn delete">
-                                    <small>Delete <i class="fas fa-trash"></i></small></a>
-                                <a href="{% url 'edit_review' review.id %}">Edit Review</a>
+                            <div class="col">
+                                <a href="{% url 'delete_review' review.id %}" class="remove-item btn">
+                                    <small><i class="fas fa-trash"></i> Delete</small></a>
+                                <a href="{% url 'edit_review' review.id %}" class="btn update-link">
+                                    <small>Edit <i class="fas fa-sync"></i></small></a>
                             </div>
                             {% endif %}
                         </div>
@@ -81,24 +82,13 @@
         </div>
         {% else %}
             <div class="col">
-                <p class="text-center">This Trip does not have any reviews yet.</p>
+                <p class="text-center">You did not review any trips yet</p>
             </div>
         {% endif %}
-     
         <!--Button to return to profile-->
         <div class="row">
             <div class="col text-center">
                 <a href="{% url 'profile' %}" class="btn-next btn">Go back to Profile</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center">
-                {% if fav_result_count == 0 %}
-                <h4 class="text-center">You have not added any trips to your favourites yet.</h4>
-                <h5 class="d-inline">Checkout our experiences</h5>
-                <!--button to go to the all trips-->
-                {% endif %}
-                <a href="{% url 'trips' %}" class="btn-next btn d-inline">Here</a>
             </div>
         </div>
     </div>
