--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{% static 'trips/css/star-rating.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Oxygen:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="shortcut icon" href="{%  static 'images/favicon.ico' %}">
     {% endblock %}
 
     {% block extra_css %}
