--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -125,7 +125,6 @@
 
 {% block postloadjs %}
     {{ block.super }}  
-    <script src="{% static 'home/js/home-script.js' %}" type="text/javascript"></script>
-
+    <script src="{% static 'home/js/home-script.js' %}"></script>
 {% endblock %}
 
