--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,10 @@
 
 {% block extra_title %} Home {% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+{% endblock %}
+
 {% block content %}
 <section class="main-content">
     <div class="container mt-0">
