--- a/static/css/base.css
+++ b/static/css/base.css
@@ -151,7 +151,7 @@ a:active,
 }
 /***********************Index.html*/
 
-.card-info {
+/* .card-info {
     border-radius: 50%;
     color: white;
     width: 10rem;
@@ -220,7 +220,7 @@ a:active,
 .category-div,
 .testimony-div {
     justify-content: center;
-}
+} */
 
 /* .testimony-div {
     background-color: black;
@@ -232,7 +232,7 @@ a:active,
     box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 } */
 
-.category-link {
+/* .category-link {
     text-decoration: none !important;
     color: #000000;
     z-index: 2;
@@ -245,7 +245,7 @@ a:active,
     cursor: pointer;
     letter-spacing: 0.1rem;
     font-size: 1.3rem;
-}
+} */
 
 .card:hover {
     box-shadow: 5px 6px 6px 2px rgba(97, 95, 95, 0.6);
@@ -798,15 +798,13 @@ footer {
         padding: 0px;
     }
 
-    .card-info {
+    /* .card-info {
     height: 8rem;
     width: 8rem;
     margin: 1rem 0.1rem;
-    }
+    } */
 
-    .card-info .card-body {
-        padding: 0px;
-    }
+
 
     /* .testimony-div {
         height: fit-content !important;
@@ -847,9 +845,9 @@ footer {
         display: block;
     }
 
-    .carousel-img {
+    /* .carousel-img {
         height: 20rem !important;
-    }
+    } */
 
     .main-nav {
         width: auto !important;
@@ -865,9 +863,9 @@ footer {
 }
 
 @media (max-width: 420px) {
-    .category-heading {
+    /* .category-heading {
         font-size: 2rem;
-    }
+    } */
 
     header {
         height: 15vh;
@@ -877,10 +875,10 @@ footer {
         display: block;
     }
 
-    .carousel-img {
+    /* .carousel-img {
         height: 30rem;
         object-fit: cover;
-    }
+    } */
 
     .result-count {
         font-size: 1rem;
@@ -896,7 +894,7 @@ footer {
         background-color: transparent;
         border: none;
     } */
-    .card-info {
+    /* .card-info {
         width: 6rem;
         height: 5rem;
         padding: 0.4rem;
@@ -909,7 +907,7 @@ footer {
 
     .card-body {
         padding: 0rem;
-    }
+    } */
 
     .btn-favourite i {
         font-size: 1.5rem;
