--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav w-auto mx-auto">
       <li class="nav-item text-white">
-        <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
+        <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}">
             Home
         </a>
       </li>
@@ -9,7 +9,7 @@
         <a class="nav-link text-white" href="{% url 'trips' %}">All Trips</a>
       </li>
       <li class="nav-item dropdown ">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Categories
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
