--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,23 +1,29 @@
+<!--Main Navigation-->
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav w-auto mx-auto">
-      <li class="nav-item text-white">
-        <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}">
-            Home
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="{% url 'trips' %}">All Trips</a>
-      </li>
-      <li class="nav-item dropdown ">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Categories
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <!--Get Category model function for category slack-->
-          {% for category in links %}
-            <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name|capfirst }}</a></li>
-          {% endfor %}
-        </ul>
-      </li>
-    </ul>
-  </div>
+  <ul class="navbar-nav w-auto mx-auto">
+    <!--Home Link-->
+    <li class="nav-item text-white">
+      <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}">
+        Home
+      </a>
+    </li>
+    <!--All Trips Link-->
+    <li class="nav-item">
+      <a class="nav-link text-white" href="{% url 'trips' %}">
+        All Trips
+      </a>
+    </li>
+    <!--Dropdown menu for Categories-->
+    <li class="nav-item dropdown ">
+      <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink3" role="button"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        Categories
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        {% for category in links %}
+        <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name|capfirst }}</a></li>
+        {% endfor %}
+      </ul>
+    </li>
+  </ul>
+</div>
