--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                                 class="img-fluid img-thumbnail rounded-circle d-block">
                             {% else %}
                             <i class="fas fa-user fa-lg d-block" aria-hidden="true"></i>
-                            <span class="sr-only">user <menu></menu></span>
+                            <span class="sr-only">user</span>
                             {% endif %}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -128,7 +128,7 @@
                             </div>
                         </a>
                     </li>
-                    <!--favourite link-->
+                    <!--Favourites link-->
                     <li class="list-inline-item nav-item">
                         {% if user.is_authenticated %}
                         <a class="nav-link {% if fav_result_count > 0 %} user-favourites {% else %} text-white {% endif %}"
